Sat Jan 20 17:59:20 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/transform.c libxslt/variables.[ch] libxslt/xslt.c
	  libxslt/xsltInternals.h libxslt/xsltutils.h: changed a few
	  structure to add an execution stack with variables. Tree
	  valued variables still missing.
	* TODO: updated

Fri Jan 19 13:16:57 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/xslt.c: check version on stylesheets
	* libxslt/xslt.c libxslt/xsltInternals.h libxslt/variables[.ch]:
	  started adding variables interfaces and modules.

Thu Jan 18 16:08:38 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/xslt.c: added support for disable-output-escaping
	  will need libxml version > 20211
	* libxslt/transform.c: cleanup
	* libxslt/xsltutils.[ch]: added output functions
	* libxslt/xsltproc.c: reuse the output function
	* tests/REC2/Makefile.am tests/REC2/vrml.xml: added VRML output
	  test

Wed Jan 17 21:03:01 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/transform.c libxslt/xslt.c: avoiding some problems
	  with blank node stripping when not allowed.

Wed Jan 17 20:15:40 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/transform.c: modified apply-templates processing
	  added select and sort support support.

Wed Jan 17 17:45:20 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* TODO: guess what, it's growing :-(
	* configure.in: setup hacking values when compiling in my
	  own environment.
	* libxslt/transform.c libxslt/xsltutils.[hc]: added a first
	  very rudimentary version of xsl:sort

Wed Jan 17 14:25:25 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* TODO: more stuff
	* libxslt/transform.c: context position and size in for-each
	* libxslt/xsltutils[ch] libxslt/makefile.am: added the util module
	  and put Error and Debug routines
	* libxslt/xslt.c libxslt/transform.c libxslt/pattern.c: switched
	  to use the Debug calls, cleanup
	* libxslt/xsltproc.c: added -v to enable debug printing
